--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "tvv-acl",
   "version": "10.0.0",
   "description": "TVV ACL",
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Joel Binnquist <joel.binnquist@gmail.com>",
   "license": "MIT",
   "scripts": {
     "rebuild": "npm run clean && npm run build",
+    "tsc:w": "tsc --watch",
     "build": "tsc",
     "clean": "rimraf ./index.d.ts && rimraf ./index.js && rimraf ./index.js.map && rimraf ./src/**/*.d.ts && rimraf ./src/**/*.js && rimraf ./src/**/*.js.map",
     "prepublish": "npm run rebuild",
@@ -15,19 +15,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@angular/common": "~2.4.3",
-    "@angular/compiler": "~2.4.3",
-    "@angular/core": "~2.4.3",
-    "@angular/forms": "~2.4.3",
-    "@angular/http": "~2.4.3",
-    "@angular/platform-browser": "~2.4.3",
-    "@angular/platform-browser-dynamic": "~2.4.3",
-    "@angular/platform-server": "~2.4.3",
-    "rxjs": "~5.0.2"
+    "@angular/common": "^2.4.9",
+    "@angular/compiler": "^2.4.9",
+    "@angular/core": "^2.4.9",
+    "@angular/forms": "^2.4.9",
+    "@angular/http": "^2.4.9",
+    "@angular/platform-browser": "^2.4.9",
+    "@angular/platform-browser-dynamic": "^2.4.9",
+    "@angular/platform-server": "^2.4.9",
+    "rxjs": "^5.0.2"
   },
   "devDependencies": {
-    "rimraf": "^2.5.4",
-    "typescript": "~2.1.5"
+    "@types/es6-shim": "0.31.32",
+    "rimraf": "2.5.4",
+    "tslib": "1.5.0",
+    "typescript": "2.1.5",
+    "zone.js": "0.7.7"
   },
   "engines": {
     "node": ">= 4.2.1",
